More spacing fixes

--- a/ui-components/src/sections/InfoCardGrid.scss
+++ b/ui-components/src/sections/InfoCardGrid.scss
@@ -1,5 +1,5 @@
 .info-cards__header {
-  @apply mb-4;
+  @apply mb-3;
 
   @screen md {
     margin-right: 1rem;
@@ -23,6 +23,7 @@
 
 .info-cards__subtitle {
   @apply font-serif;
+  @apply mb-5;
 }
 
 .info-cards__grid {
@@ -32,6 +33,10 @@
   }
 
   .info-card {
+    & > :not(.info-card__title) {
+      @apply text-tiny;
+    }
+
     @screen md {
       width: calc(50% - 1rem);
       margin-right: 1rem;
